# TinderForNerds-Backend

./:  .gitignore  .gitignore  README.md  TEST.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  schema.sql  test_client.html
.claude/: settings.local.json
app/: config.py  deps.py  main.py
app/auth/: jwt.py  schemas.py
app/db/: client.py  types.py
app/models/: admin.py  ai.py  bookings.py  common.py  discovery.py  events.py  likes.py  matches.py  messages.py  notifications.py  profiles.py
app/routers/: admin.py  ai.py  availability.py  bookings.py  discovery.py  events.py  health.py  likes.py  matches.py  messages.py  moderation.py  notifications.py  profiles.py  users.py
app/services/: admin.py  availability.py  bookings.py  discovery_ranker.py  embeddings.py  events.py  likes.py  matches.py  messages.py  moderation.py  notifications.py  profiles.py  rate_limit.py  starter_gen.py
app/worker/: __init__.py  booking_reminder.py  cleanup_stale_data.py  embed_profile.py  event_reminder.py  send_notification.py  verify_github_link.py
supabase/: config.toml  seed.sql
supabase/migrations/: 0001_initial_schema.sql
tests/: conftest.py
tests/rls/: test_profiles_rls.py
tests/routers/: test_health.py  test_likes.py
tests/services/: test_ranker.py
