[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promatch-backend"
version = "0.1.0"
description = "ProMatch backend — FastAPI + Supabase"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
